# foundation

./: .gitmodules  CMakeLists.txt
include/goliath/: CMakeLists.txt  foundation.h
include/goliath/foundation/: handle.h  handle_error.h  publisher_service.h
include/goliath/foundation/repositories/: config_repo.h  polling_repository.h  repository.h  watcher.h
include/goliath/foundation/util/: console.h
resources/: organization_name.txt
src/: CMakeLists.txt  handle.cpp  handle.h  handle_error.cpp  publisher_service.h
src/repositories/: battery_repository.cpp  config_repo.cpp  polling_repository.cpp  proto_repository.h  repository.cpp  repository.h  watcher.cpp
src/util/: console.cpp  console.h  foundation_utilities.cpp  foundation_utilities.h
